@@ -75,6 +75,8 @@ CHANGES - Current Version:
   TABFile::IsBoundsSet() can be used after setting projection to
   establish if some default bounds were found or not for the projection.
 
+- Fixed IMapInfoFile::CreateFeature(), was leaking feature memory. (NFW)
+
 
 Version 1.0.4 - (2000-11-14)
 ----------------------------
@@ -264,5 +266,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.43 2001-01-23 22:11:13 daniel Exp $
+$Id: HISTORY.TXT,v 1.44 2001-02-06 22:03:24 warmerda Exp $
 ------------
